@@ -103,7 +103,7 @@ totest['raw'] = [
         "Gannet Ripple", 1.99, "\xbfOn a \\u03c3\\u03c4\\u03b9\\u03ba?"
 """ % utf_16_file_rel],
 ["""\
-UTF-16 is no valid ASCII, but the parser doesn't complain.  BUG?
+Raw input file is UTF-16-encoded, and is not valid ASCII.
 
 .. raw:: html
    :file: %s
@@ -112,13 +112,15 @@ UTF-16 is no valid ASCII, but the parser doesn't complain.  BUG?
 """\
 <document source="test data">
     <paragraph>
-        UTF-16 is no valid ASCII, but the parser doesn't complain.  BUG?
-    <raw format="html" source="%s" xml:space="preserve">
-        \xfe\xff\x00"\x00T\x00r\x00e\x00a\x00t\x00"\x00,\x00 \x00"\x00Q\x00u\x00a\x00n\x00t\x00i\x00t\x00y\x00"\x00,\x00 \x00"\x00D\x00e\x00s\x00c\x00r\x00i\x00p\x00t\x00i\x00o\x00n\x00"\x00
-        \x00"\x00A\x00l\x00b\x00a\x00t\x00r\x00\xb0\x00\xdf\x00"\x00,\x00 \x002\x00.\x009\x009\x00,\x00 \x00"\x00\xa1\x00O\x00n\x00 \x00a\x00 \x03\xc3\x03\xc4\x03\xb9\x03\xba\x00!\x00"\x00
-        \x00"\x00C\x00r\x00u\x00n\x00c\x00h\x00y\x00 \x00F\x00r\x00o\x00g\x00"\x00,\x00 \x001\x00.\x004\x009\x00,\x00 \x00"\x00I\x00f\x00 \x00w\x00e\x00 \x00t\x00o\x00o\x00k\x00 \x00t\x00h\x00e\x00 \x00b\x00\xf6\x00n\x00e\x00s\x00 \x00o\x00u\x00t\x00,\x00 \x00i\x00t\x00 \x00w\x00o\x00u\x00l\x00d\x00n \x19\x00t\x00 \x00b\x00e\x00
-        \x00c\x00r\x00u\x00n\x00c\x00h\x00y\x00,\x00 \x00n\x00o\x00w\x00 \x00w\x00o\x00u\x00l\x00d\x00 \x00i\x00t\x00?\x00"\x00
-        \x00"\x00G\x00a\x00n\x00n\x00e\x00t\x00 \x00R\x00i\x00p\x00p\x00l\x00e\x00"\x00,\x00 \x001\x00.\x009\x009\x00,\x00 \x00"\x00\xbf\x00O\x00n\x00 \x00a\x00 \x03\xc3\x03\xc4\x03\xb9\x03\xba\x00?\x00"\x00
+        Raw input file is UTF-16-encoded, and is not valid ASCII.
+    <system_message level="4" line="3" source="test data" type="SEVERE">
+        <paragraph>
+            Problem with "raw" directive:
+            UnicodeError: Unable to decode input data.  Tried the following encodings: \'ascii\'.
+        <literal_block xml:space="preserve">
+            .. raw:: html
+               :file: %s
+               :encoding: ascii
 """ % utf_16_file_rel],
 ["""\
 .. raw:: html
